--- a/text-to-speech/style.css
+++ b/text-to-speech/style.css
@@ -1,3 +1,9 @@
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
 body{
     background-color: silver;
     color: gray;
@@ -5,7 +11,7 @@ body{
 }
 form{
     width: 450px;
-    border: 4px solid magenta;
+    border: 4px solid aqua;
     background-color: black;
     padding: 30px;
   }
